# io-flow

./: .gitignore  DEV.md  ELK_LAYOUT_NOTES.md  GRAMMAR_ALTERNATIVES.md  PLAN.md  README.md  class_passing_styles.yaml  context.md  example_input.yaml  example_job-search_sankey.csv  example_job-search_sankey_by_fit.css  example_job-search_sankey_by_fit.yaml  example_job-search_sankey_by_source.css  example_job-search_sankey_by_source.yaml  example_job-search_sankey_by_type.css  example_job-search_sankey_by_type.yaml  pyproject.toml
examples/: anchors.yaml  class_layout.yaml  class_passing_styles.yaml  csv_to_sankey.py  weighted_flow.yaml
src/io_flow/: align.py  cli.py  edge_store.py  emit.py  layout_store.py  parser.py  server.py  walk.py
src/io_flow/assets/: templates.js  viewer.css  viewer.html
src/io_flow/assets/engine/: a11y.js  anchors.js  collapse.js  connect.js  dim.js  drag.js  edges.js  layout.js  live.js  pan.js  resize.js  save.js  ui.js  viewer.js
src/io_flow/assets/skins/: codemap.css  codemap.js
tests/: test_align.py  test_cli.py  test_edge_store.py  test_emit.py  test_layout_store.py  test_parser.py  test_server.py
