[project]
name = "io-flow"
version = "0.1.0"
description = "YAML -> interactive, single-file HTML dependency/dataflow diagrams"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.scripts]
io-flow = "io_flow.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/io_flow"]

[tool.hatch.build.targets.wheel.force-include]
"src/io_flow/assets" = "io_flow/assets"
